fix: измение класса с ошибкой popup__error_visible

--- a/blocks/popup/__error/popup__error.css
+++ b/blocks/popup/__error/popup__error.css
@@ -1,7 +1,8 @@
-.popup__input-error {
+.popup__error {
   display: block;
   font-size: 12px;
   line-height: 15px;
   height: 15px;
   color: #ff0000;
+  visibility: hidden;
 }
